# 24ul-analytics

./: times_2022.csv
frontend/: Dockerfile  dash_graph.py
mock_api/: main.py  pyproject.toml  requirements.txt
scraper/: Dockerfile  scraper.py  start.sh  times_2022.csv
scraper/backup/: times_2022_1666702920.csv
