[tool.poetry]
name = "mock_api"
version = "0.1.0"
description = ""
authors = ["Ruben Hias <ruben.hias@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.85.1"
uvicorn = {extras = ["standard"], version = "^0.19.0"}
pandas = "^1.5.1"
plotly = "^5.10.0"
dash = "^2.6.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
